Refactor ISymbolKind to enum and update APIs
Replace the old ISymbolKind integer-based interface with a typed enum (ISymbolKind) . Update annotations (@symbol, @type, @inside) and many APIs and registries to use ISymbolKind instead of raw int codes (method signatures, maps/multimaps, sets, and prototypes). Adjust related code paths (ArtefactProtoRegistry, AbstractGamlAdditions, IDescription, ISymbolDescriptionFactory, IArtefactProto, IArtefactProtoFactory, etc.) to handle enum values and provide utility methods (code(), get()). Minor javadoc/formatting tweaks and a small comment rename in XMLElements. This centralizes symbol-kind semantics and improves type safety across the codebase.