@@ -10,9 +10,6 @@
  ********************************************************************************************************/
 package gama.annotations.support;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 
@@ -22,99 +19,119 @@ import java.util.Set;
  * @todo Description
  *
  */
-public interface ISymbolKind {
+public enum ISymbolKind {
 
-	/**
-	 * The Interface Variable.
-	 */
-	public interface Variable {
+	/** The number. */
+	NUMBER(101),
 
-		/** The number. */
-		int NUMBER = 101;
+	/** The container. */
+	CONTAINER(102),
 
-		/** The container. */
-		int CONTAINER = 102;
-
-		/** The regular. */
-		int REGULAR = 104;
-
-		/** The kinds. */
-		Set<Integer> KINDS = new HashSet<>(Arrays.asList(NUMBER, CONTAINER, REGULAR));
-
-		/** The kinds as string. */
-		Map<Integer, String> KINDS_AS_STRING = new HashMap<>() {
-			{
-				put(NUMBER, "Number variable");
-				put(CONTAINER, "Container variable");
-				put(REGULAR, "Variable");
-			}
-		};
-	}
+	/** The regular. */
+	REGULAR(104),
 
 	/** The species. */
-	int SPECIES = 0;
+	SPECIES(0),
 
 	/** The model. */
-	int MODEL = 1;
+	MODEL(1),
 
 	/** The single statement. */
-	int SINGLE_STATEMENT = 2;
+	SINGLE_STATEMENT(2),
 
 	/** The behavior. */
-	int BEHAVIOR = 3;
+	BEHAVIOR(3),
 
 	/** The parameter. */
-	int PARAMETER = 4;
+	PARAMETER(4),
 
 	/** The output. */
-	int OUTPUT = 5;
+	OUTPUT(5),
 
 	/** The layer. */
-	int LAYER = 6;
+	LAYER(6),
 
 	/** The skill. */
-	int SKILL = 7;
+	SKILL(7),
 
 	/** The batch section. */
-	int BATCH_SECTION = 8;
+	BATCH_SECTION(8),
 
 	/** The batch method. */
-	int BATCH_METHOD = 9;
+	BATCH_METHOD(9),
 
 	/** The environment. */
-	int ENVIRONMENT = 10;
+	ENVIRONMENT(10),
 
 	/** The sequence statement. */
-	int SEQUENCE_STATEMENT = 11;
+	SEQUENCE_STATEMENT(11),
 
 	/** The action. */
 	// Equal to SEQUENCE_STATEMENT
-	int ACTION = 11;
-
+	ACTION(11),
 	/** The experiment. */
-	int EXPERIMENT = 13;
+	EXPERIMENT(13),
 
 	/** The abstract section. */
-	int ABSTRACT_SECTION = 14;
+	ABSTRACT_SECTION(14),
 
 	/** The operator. */
-	int OPERATOR = 15;
+	OPERATOR(15),
 
 	/** The platform. */
-	int PLATFORM = 16;
+	PLATFORM(16),
+
+	/** The facet. Doesnt count */
+	FACET(9999);
 
 	/** The number. */
 	// Update this variable when adding a kind of symbol
-	int __NUMBER_OF_DECLARED_SYMBOL_KINDS__ = 17;
+	final static int __NUMBER_OF_DECLARED_SYMBOL_KINDS__ = 17;
+
+	/** The code. */
+	final int code;
+
+	/**
+	 * Instantiates a new i symbol kind 2.
+	 *
+	 * @param code
+	 *            the code
+	 */
+	ISymbolKind(final int code) {
+		this.code = code;
+	}
+
+	/**
+	 * Code.
+	 *
+	 * @return the int
+	 */
+	public int code() {
+		return code;
+	}
+
+	/**
+	 * Gets the.
+	 *
+	 * @param code
+	 *            the code
+	 */
+	public static ISymbolKind get(final int code) {
+		for (ISymbolKind kind : ISymbolKind.values()) { if (kind.code() == code) return kind; }
+		return null;
+	}
 
 	/** The template menu. */
-	String[] TEMPLATE_MENU = { "Species", "Model", "Statement", "Behavior", "Parameter", "Output", "Layer", "Skill",
-			"Batch", "Batch", "", "Statement", "Statement", "Experiment", "", "Operator", "" };
+	public static String[] TEMPLATE_MENU = { "Species", "Model", "Statement", "Behavior", "Parameter", "Output",
+			"Layer", "Skill", "Batch", "Batch", "", "Statement", "Statement", "Experiment", "", "Operator", "" };
 
 	/** The Constant STATEMENTS_WITH_ATTRIBUTES. */
-	Set<Integer> STATEMENTS_CONTAINING_ATTRIBUTES = new HashSet<>(Arrays.asList(SPECIES, EXPERIMENT, OUTPUT, MODEL));
+	public static final Set<ISymbolKind> STATEMENTS_CONTAINING_ATTRIBUTES = Set.of(SPECIES, EXPERIMENT, OUTPUT, MODEL);
 
-	/** The facet. */
-	int FACET = 9999;
+	/** The kinds. */
+	public static Set<ISymbolKind> VARIABLES = Set.of(NUMBER, CONTAINER, REGULAR);
 
+	/** The kinds as string. */
+	public static Map<ISymbolKind, String> KINDS_AS_STRING =
+			Map.of(NUMBER, "Number variable", CONTAINER, "Container variable", REGULAR, "Variable");
 }
